# Quartavia-Deploy-OCR

./: .gitignore  README.md  packages.txt  pyproject.toml
src/quartavia_ocr/: crew.py  main.py
src/quartavia_ocr/config/: agents.yaml  tasks.yaml
src/quartavia_ocr/tools/: custom_tool (Backup).py  custom_tool.py
tests/: test_ocr.py
