[project]
name = "quartavia_ocr"
version = "0.1.0"
description = "quartavia_ocr using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0"
]

[project.scripts]
quartavia_ocr = "quartavia_ocr.main:run"
run_crew = "quartavia_ocr.main:run"
train = "quartavia_ocr.main:train"
replay = "quartavia_ocr.main:replay"
test = "quartavia_ocr.main:test"
run_with_trigger = "quartavia_ocr.main:run_with_trigger"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"