[project]
name = "quartavia_ocr"
version = "0.1.0"
description = "quartavia_ocr using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0",
    "agentops==0.4.21",
    "httpx-sse==0.4.3",
    "mcp==1.18.0",
    "openai>=1.0.0",
    "opentelemetry-instrumentation==0.59b0",
    "ordered-set==4.1.0",
    "pdf2image==1.17.0",
    "psutil==7.0.0",
    "python-multipart==0.0.20",
    "socksio==1.0.0",
    "sse-starlette==3.0.2",
    "starlette==0.48.0",
    "termcolor==2.4.0",
    "tesseract==0.1.3",
    "pytesseract==0.3.13",
    "pymupdf==1.26.5",
    "easyocr==1.7.2",
    "wrapt==1.17.3"
]

[project.scripts]
quartavia_ocr = "quartavia_ocr.main:run"
run_crew = "quartavia_ocr.main:run"
train = "quartavia_ocr.main:train"
replay = "quartavia_ocr.main:replay"
test = "quartavia_ocr.main:test"
run_with_trigger = "quartavia_ocr.main:run_with_trigger"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"